main-env/haproxy1/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: haproxy
spec:
  ingressClassName: nginx
  rules:
    - host: haproxy.starmooc.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-haproxy
                port:
                  number: 80
